# backend/src/Api/wwwroot/swagger/specification.json
@@ -832,7 +832,7 @@
         ]
       }
     },
-    "/Users/uniquename": {
+    "/Users/uniqueUserName": {
       "get": {
         "tags": [
           "Users"
@@ -876,7 +876,7 @@
         ]
       }
     },
-    "/Users/uniqueemail": {
+    "/Users/uniqueEmail": {
       "get": {
         "tags": [
           "Users"
@@ -968,7 +968,7 @@
         ]
       }
     },
-    "/Users/{id}/username": {
+    "/Users/{id}/userName": {
       "put": {
         "tags": [
           "Users"
@@ -1014,6 +1014,19 @@
             "JWT": []
           }
         ]
+      }
+    },
+    "/ws": {
+      "get": {
+        "tags": [
+          "WebSocket"
+        ],
+        "operationId": "WebSocket_Get",
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
       }
     }
   },
